--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.2",
     "@react-icons/all-files": "^4.1.0",
@@ -12,7 +11,6 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
-    "dotenv": "^16.0.3",
     "mongodb": "^4.13.0",
     "mongoose": "4.0",
     "react": "^18.2.0",
@@ -21,7 +19,6 @@
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "react-spinners-kit": "^1.9.1",
-    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -47,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.3"
   }
 }
